--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 <h1 class="title">Hello world</h1>
+<button class="button">Button</button>
 
 <script src="js/index.js"></script>
 </body>
